# json-steamroller

./: Dockerfile  README.md  pyproject.toml
json_steamroller/: executor.py  typedefs.py
tests/: example.json  notes.ipynb
